# Tic-Tac-Toe-with-CPP

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/algorithms/: blank.h
src/components/: CMakeLists.txt  cell.cpp  cell.h  field.cpp  field.h  piece_states.cpp  piece_states.h
src/logic/: CMakeLists.txt  blank.cpp  key_reading.cpp  key_reading.h  utils.cpp  utils.h
src/visuals/: CMakeLists.txt  visuals.cpp  visuals.h
